Troubleshooting contrast issue.

--- a/styles/base.css
+++ b/styles/base.css
@@ -29,7 +29,7 @@ header span {
 
 nav a {
   background-color:#468189;
-  color: white;
+  color: #ffffff;
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
